--- a/distributions/virtualization/pom.xml
+++ b/distributions/virtualization/pom.xml
@@ -39,7 +39,7 @@ http://maven.apache.org/maven-v4_0_0.xsd">
       <version>0.4.0-SNAPSHOT</version>
     </dependency>
 
-    <!-- vtn 
+    <!-- vtn -->
 
     <dependency>
       <groupId>org.opendaylight.vtn</groupId>
@@ -56,7 +56,6 @@ http://maven.apache.org/maven-v4_0_0.xsd">
       <artifactId>manager.northbound</artifactId>
       <version>0.1.0-SNAPSHOT</version>
     </dependency>    
-    -->
 
     <!-- defense4all -->
 
@@ -105,6 +104,13 @@ http://maven.apache.org/maven-v4_0_0.xsd">
       <artifactId>affinity.northbound</artifactId>
       <version>0.4.0-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.opendaylight.affinity</groupId>
+      <artifactId>l2agent</artifactId>
+      <version>0.4.0-SNAPSHOT</version>
+    </dependency>
+
     <!--
     <dependency>
       <groupId>org.opendaylight.affinity</groupId>
