Added Distribution management to pom.xml
This is needed to allow artifact deployment and fix the merge
job.

Change-Id: Id30ede9d0523dde500d6fa50f78e719a7fb248da
Signed-off-by: Ed Warnicke <eaw@cisco.com>

--- a/pom.xml
+++ b/pom.xml
@@ -89,4 +89,21 @@
       <url>${nexusproxy}/repositories/opendaylight.snapshot/</url>
     </pluginRepository>
   </pluginRepositories>
+
+  <distributionManagement>
+    <!-- OpenDayLight Released artifact -->
+    <repository>
+      <id>opendaylight-release</id>
+      <url>${nexusproxy}/repositories/opendaylight.release/</url>
+    </repository>
+    <!-- OpenDayLight Snapshot artifact -->
+    <snapshotRepository>
+      <id>opendaylight-snapshot</id>
+      <url>${nexusproxy}/repositories/opendaylight.snapshot/</url>
+    </snapshotRepository>
+    <site>
+      <id>${project.artifactId}-site</id>
+      <url>./</url>
+    </site>
+  </distributionManagement>
 </project>
