--- a/distributions/serviceprovider/pom.xml
+++ b/distributions/serviceprovider/pom.xml
@@ -160,6 +160,12 @@ http://maven.apache.org/maven-v4_0_0.xsd">
       <version>0.3.0-SNAPSHOT</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.opendaylight.bgpcep</groupId>
+      <artifactId>bgp-parser-spi</artifactId>
+      <version>0.3.0-SNAPSHOT</version>
+    </dependency>
+
     <!-- lispflowmapping -->
 
     <dependency>
