--- a/distributions/serviceprovider/pom.xml
+++ b/distributions/serviceprovider/pom.xml
@@ -67,6 +67,13 @@ http://maven.apache.org/maven-v4_0_0.xsd">
       <artifactId>affinity.northbound</artifactId>
       <version>0.4.0-SNAPSHOT</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.opendaylight.affinity</groupId>
+      <artifactId>l2agent</artifactId>
+      <version>0.4.0-SNAPSHOT</version>
+    </dependency>
+
     <!--
     <dependency>
       <groupId>org.opendaylight.affinity</groupId>
