--- a/distributions/virtualization/pom.xml
+++ b/distributions/virtualization/pom.xml
@@ -152,6 +152,12 @@ http://maven.apache.org/maven-v4_0_0.xsd">
 
     <dependency>
       <groupId>org.opendaylight.opendove</groupId>
+      <artifactId>odmc.rest</artifactId>
+      <version>0.4.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.opendaylight.opendove</groupId>
       <artifactId>odmc.northbound</artifactId>
       <version>0.4.0-SNAPSHOT</version>
     </dependency>
