Enable defense4all dependencies in virtualization
Change-Id: I456971c6984f2d99529be53b676cf14cc4d0b9d3
Signed-off-by: Alissa Bonas <abonas@redhat.com>

--- a/distributions/virtualization/pom.xml
+++ b/distributions/virtualization/pom.xml
@@ -66,7 +66,7 @@ http://maven.apache.org/maven-v4_0_0.xsd">
          Note: These should pull through all other defense for all modules via dependencies
 
       -->
-    <!--
+
     <dependency>
       <groupId>org.opendaylight.defense4all</groupId>
       <artifactId>defense4all.core.impl</artifactId>
@@ -81,10 +81,10 @@ http://maven.apache.org/maven-v4_0_0.xsd">
     
     <dependency>
       <groupId>org.opendaylight.defense4all</groupId>
-      <artifactId>restservice</artifactId>
+      <artifactId>defense4all.restservice</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
-    -->
+
 
     <!-- affinity -->
     <dependency>
