--- a/distributions/serviceprovider/pom.xml
+++ b/distributions/serviceprovider/pom.xml
@@ -173,6 +173,18 @@ http://maven.apache.org/maven-v4_0_0.xsd">
       <version>0.3.0-SNAPSHOT</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.opendaylight.bgpcep</groupId>
+      <artifactId>rsvp-api</artifactId>
+      <version>0.3.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+       <groupId>org.opendaylight.bgpcep</groupId>
+       <artifactId>pcep-spi</artifactId>
+       <version>0.3.0-SNAPSHOT</version>
+    </dependency>
+
     <!-- lispflowmapping -->
 
     <dependency>
