--- a/distributions/base/pom.xml
+++ b/distributions/base/pom.xml
@@ -1,10 +1,10 @@
-<!--                                                                                                                                     
-Adapted from David Erickson's Distribution pom.xml                                                                                       
-see https://git.opendaylight.org/gerrit/#/c/390/                                                                                         
+<!--
+Adapted from David Erickson's Distribution pom.xml
+see https://git.opendaylight.org/gerrit/#/c/390/
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                                                                                    
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -17,7 +17,6 @@ http://maven.apache.org/maven-v4_0_0.xsd">
   <artifactId>distributions-base</artifactId>
   <packaging>pom</packaging>
   <name>OpenDaylight Base Edition</name>
-
   <dependencies>
     <dependency>
       <groupId>org.opendaylight.controller</groupId>
@@ -27,6 +26,12 @@ http://maven.apache.org/maven-v4_0_0.xsd">
       <classifier>osgipackage</classifier>
       <!-- Make sure this isn't included on any classpath-->
       <scope>provided</scope>
+    </dependency>
+    <!-- ovsdb -->
+    <dependency>
+      <groupId>org.opendaylight.ovsdb</groupId>
+      <artifactId>ovsdb</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
   <build>
