--- a/distributions/virtualization/pom.xml
+++ b/distributions/virtualization/pom.xml
@@ -60,7 +60,14 @@ http://maven.apache.org/maven-v4_0_0.xsd">
       <groupId>org.opendaylight.vtn</groupId>
       <artifactId>manager.northbound</artifactId>
       <version>0.1.0-SNAPSHOT</version>
-    </dependency>    
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.vtn</groupId>
+      <artifactId>distribution.vtn-coordinator</artifactId>
+      <version>5.0.0.0-SNAPSHOT</version>
+      <type>tar.bz2</type>
+      <classifier>bin</classifier>
+    </dependency>
 
     <!-- defense4all -->
 
