Fix to match changes
Change-Id: I9b091627a885e870659efa4f170acec22130a149
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/31-bgp.conf
+++ b/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/31-bgp.conf
@@ -2,39 +2,39 @@
         <module>
                 <type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:parser:spi">prefix:bgp-extensions-impl</type>
                 <name>global-bgp-extensions</name>
+		<extension>
+                        <type xmlns:bgpspi="urn:opendaylight:params:xml:ns:yang:controller:bgp:parser:spi">bgpspi:extension</type>
+                        <name>base-bgp-parser</name>
+		</extension>
+		<extension>
+                        <type xmlns:bgpspi="urn:opendaylight:params:xml:ns:yang:controller:bgp:parser:spi">bgpspi:extension</type>
+                        <name>bgp-linkstate</name>
+		</extension>
         </module>
 	<module>
 		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:base-bgp-parser</type>
 		<name>base-bgp-parser</name>
-		<bgp-extensions>
-                        <type xmlns:bgpspi="urn:opendaylight:params:xml:ns:yang:controller:bgp:parser:spi">bgpspi:extensions</type>
-                        <name>global-bgp-extensions</name>
-		</bgp-extensions>
 	</module>
         <module>
                 <type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:spi">prefix:bgp-rib-extensions-impl</type>
                 <name>global-rib-extensions</name>
+		<extension>
+			<type xmlns:ribspi="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:spi">ribspi:extension</type>
+			<name>base-bgp-rib</name>
+		</extension>
+		<extension>
+			<type xmlns:ribspi="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:spi">ribspi:extension</type>
+			<name>bgp-linkstate</name>
+		</extension>
         </module>
 	<module>
 		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:base-bgp-rib</type>
 		<name>base-bgp-rib</name>
-		<rib-extensions>
-                        <type xmlns:ribspi="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:spi">ribspi:extensions</type>
-                        <name>global-rib-extensions</name>
-		</rib-extensions>
 	</module>
         <module>
                 <type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:linkstate">prefix:bgp-linkstate</type>
                 <name>bgp-linkstate</name>
-		<bgp-extensions>
-                        <type xmlns:bgpspi="urn:opendaylight:params:xml:ns:yang:controller:bgp:parser:spi">bgpspi:extensions</type>
-                        <name>global-bgp-extensions</name>
-		</bgp-extensions>
-		<rib-extensions>
-                        <type xmlns:ribspi="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:spi">ribspi:extensions</type>
-                        <name>global-rib-extensions</name>
-		</rib-extensions>
-        </module>
+	</module>
 	<module>
 		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:bgp-dispatcher-impl</type>
 		<name>global-bgp-dispatcher</name>
@@ -44,11 +44,11 @@
 		</bgp-extensions>
 		<boss-group>
 			<type xmlns:netty="urn:opendaylight:params:xml:ns:yang:controller:netty">netty:netty-threadgroup</type>
-			<name>global-boss-group</name>
+			<name>ref_global-boss-group</name>
 		</boss-group>
 		<worker-group>
 			<type xmlns:netty="urn:opendaylight:params:xml:ns:yang:controller:netty">netty:netty-threadgroup</type>
-			<name>global-worker-group</name>
+			<name>ref_global-worker-group</name>
 		</worker-group>
 	</module>
 //SERVICES START
@@ -56,21 +56,43 @@
                 <type xmlns:bgpspi="urn:opendaylight:params:xml:ns:yang:controller:bgp:parser:spi">bgpspi:extensions</type>
                 <instance>
                         <name>global-bgp-extensions</name>
-                        <provider>/config/modules/module[name='bgp-extensions-impl']/instance[name='global-bgp-extensions']</provider>
+                        <provider>/modules/module[type='bgp-extensions-impl'][name='global-bgp-extensions']</provider>
                 </instance>
         </service>
+        <service>
+                <type xmlns:bgpspi="urn:opendaylight:params:xml:ns:yang:controller:bgp:parser:spi">bgpspi:extension</type>
+                <instance>
+                        <name>base-bgp-parser</name>
+                        <provider>/modules/module[type='base-bgp-parser'][name='base-bgp-parser']</provider>
+		</instance>
+		<instance>
+                        <name>bgp-linkstate</name>
+                        <provider>/modules/module[type='bgp-linkstate'][name='bgp-linkstate']</provider>
+                </instance>
+        </service>
+        <service>
+		<type xmlns:ribspi="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:spi">ribspi:extension</type>
+                <instance>
+                        <name>base-bgp-rib</name>
+                        <provider>/modules/module[type='base-bgp-rib'][name='base-bgp-rib']</provider>
+		</instance>
+		<instance>
+                        <name>bgp-linkstate</name>
+                        <provider>/modules/module[type='bgp-linkstate'][name='bgp-linkstate']</provider>
+                </instance>
+	</service>
         <service>
                 <type xmlns:ribspi="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:spi">ribspi:extensions</type>
                 <instance>
                         <name>global-rib-extensions</name>
-                        <provider>/config/modules/module[name='bgp-rib-extensions-impl']/instance[name='global-rib-extensions']</provider>
+                        <provider>/modules/module[type='bgp-rib-extensions-impl'][name='global-rib-extensions']</provider>
                 </instance>
         </service>
 	<service>
 		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:bgp-dispatcher</type>
 		<instance>
 			<name>global-bgp-dispatcher</name>
-                        <provider>/config/modules/module[name='bgp-dispatcher-impl']/instance[name='global-bgp-dispatcher']</provider>
+                        <provider>/modules/module[type='bgp-dispatcher-impl'][name='global-bgp-dispatcher']</provider>
 		</instance>
 	</service>
 //CAPABILITIES START
