--- a/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/32-pcep.conf
+++ b/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/32-pcep.conf
@@ -2,22 +2,22 @@
         <module>
                 <type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:pcep:spi">prefix:pcep-extensions-impl</type>
                 <name>global-pcep-extensions</name>
+		<extension>
+			<type xmlns:pcepspi="urn:opendaylight:params:xml:ns:yang:controller:pcep:spi">pcepspi:extension</type>
+			<name>pcep-parser-base</name>
+		</extension>
+		<extension>
+			<type xmlns:pcepspi="urn:opendaylight:params:xml:ns:yang:controller:pcep:spi">pcepspi:extension</type>
+			<name>pcep-parser-crabbe-initiated</name>
+		</extension>
         </module>
 	<module>
 		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:pcep:impl">prefix:pcep-parser-base</type>
 		<name>pcep-parser-base</name>
-		<pcep-extensions>
-			<type xmlns:pcepspi="urn:opendaylight:params:xml:ns:yang:controller:pcep:spi">pcepspi:extensions</type>
-			<name>global-pcep-extensions</name>
-		</pcep-extensions>
         </module>
 	<module>
 		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:pcep:impl">prefix:pcep-parser-crabbe-initiated</type>
 		<name>pcep-parser-crabbe-initiated</name>
-		<pcep-extensions>
-			<type xmlns:pcepspi="urn:opendaylight:params:xml:ns:yang:controller:pcep:spi">pcepspi:extensions</type>
-			<name>global-pcep-extensions</name>
-		</pcep-extensions>
         </module>
 	<module>
 		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:pcep:impl">prefix:pcep-session-proposal-factory-impl</type>
@@ -76,6 +76,17 @@
                 <instance>
                         <name>global-pcep-extensions</name>
                         <provider>/config/modules/module[name='pcep-extensions-impl']/instance[name='global-pcep-extensions']</provider>
+                </instance>
+        </service>
+        <service>
+                <type xmlns:pcepspi="urn:opendaylight:params:xml:ns:yang:controller:pcep:spi">pcepspi:extension</type>
+                <instance>
+                        <name>pcep-parser-base</name>
+                        <provider>/config/modules/module[name='pcep-parser-base']/instance[name='pcep-parser-base']</provider>
+                </instance>
+                <instance>
+                        <name>pcep-parser-crabbe-initiated</name>
+                        <provider>/config/modules/module[name='pcep-parser-crabbe-initiated']/instance[name='pcep-parser-crabbe-initiated']</provider>
                 </instance>
         </service>
 	<service>
