Update configuration files to match current expectations
Change-Id: I1e04ee2974be832b04849e2a712d636b1dccb9cf
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/30-programming.conf
+++ b/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/30-programming.conf
@@ -8,11 +8,11 @@
 		</notification-service>
 		<rpc-registry>
 			<type xmlns:binding="urn:opendaylight:params:xml:ns:yang:controller:md:sal:binding">binding:binding-rpc-registry</type>
-			<name>ref_binding-rpc-broker</name>
+			<name>ref_binding-broker-impl</name>
 		</rpc-registry>
 		<timer>
 			<type xmlns:netty="urn:opendaylight:params:xml:ns:yang:controller:netty">netty:netty-timer</type>
-			<name>global-timer</name>
+			<name>ref_global-timer</name>
 		</timer>
         </module>
 //SERVICES START
@@ -20,7 +20,7 @@
                 <type xmlns:pgmspi="urn:opendaylight:params:xml:ns:yang:controller:programming:spi">pgmspi:instruction-scheduler</type>
                 <instance>
                         <name>global-instruction-scheduler</name>
-                        <provider>/config/modules/module[name='instruction-scheduler-impl']/instance[name='global-instruction-scheduler']</provider>
+                        <provider>/modules/module[type='instruction-scheduler-impl'][name='global-instruction-scheduler']</provider>
                 </instance>
         </service>
 //CAPABILITIES START
