--- a/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/32-pcep.conf
+++ b/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/32-pcep.conf
@@ -36,15 +36,15 @@
 		</pcep-session-proposal-factory>
 		<boss-group>
 			<type xmlns:netty="urn:opendaylight:params:xml:ns:yang:controller:netty">netty:netty-threadgroup</type>
-			<name>global-boss-group</name>
+			<name>ref_global-boss-group</name>
 		</boss-group>
 		<worker-group>
 			<type xmlns:netty="urn:opendaylight:params:xml:ns:yang:controller:netty">netty:netty-threadgroup</type>
-			<name>global-worker-group</name>
+			<name>ref_global-worker-group</name>
 		</worker-group>
 		<timer>
 			<type xmlns:netty="urn:opendaylight:params:xml:ns:yang:controller:netty">netty:netty-timer</type>
-			<name>global-timer</name>
+			<name>ref_global-timer</name>
 		</timer>
 	</module>
 	<module>
@@ -60,11 +60,11 @@
 		</dispatcher>
 		<rpc-registry>
 			<type xmlns:binding="urn:opendaylight:params:xml:ns:yang:controller:md:sal:binding">binding:binding-rpc-registry</type>
-			<name>ref_binding-rpc-broker</name>
+			<name>ref_binding-broker-impl</name>
 		</rpc-registry>
 		<scheduler>
 			<type xmlns:pgmspi="urn:opendaylight:params:xml:ns:yang:controller:programming:spi">pgmspi:instruction-scheduler</type>
-                        <name>global-instruction-scheduler</name>
+                        <name>ref_global-instruction-scheduler</name>
 		</scheduler>
 		<topology-id>pcep-topology</topology-id>
 		<listen-address>0.0.0.0</listen-address>
