--- a/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/41-bgp-example.conf
+++ b/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/41-bgp-example.conf
@@ -10,7 +10,7 @@
 		<name>example-bgp-peer</name>
 		<bgp-dispatcher>
 			<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:bgp-dispatcher</type>
-			<name>global-bgp-dispatcher</name>
+			<name>ref_global-bgp-dispatcher</name>
 		</bgp-dispatcher>
 		<bgp-proposal>
 			<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:bgp-proposal</type>
@@ -27,7 +27,7 @@
 		<connect-time>5000</connect-time>
 		<executor>
 			<type xmlns:netty="urn:opendaylight:params:xml:ns:yang:controller:netty">netty:netty-event-executor</type>
-			<name>global-event-executor</name>
+			<name>ref_global-event-executor</name>
 		</executor>
 	</module>
 	<module>
@@ -39,7 +39,7 @@
 		</bgp>
 		<extensions>
                         <type xmlns:ribspi="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:spi">ribspi:extensions</type>
-                        <name>global-rib-extensions</name>
+                        <name>ref_global-rib-extensions</name>
 		</extensions>
 		<data-provider>
 			<type xmlns:binding="urn:opendaylight:params:xml:ns:yang:controller:md:sal:binding">binding:binding-data-broker</type>
