Fixup configuration to match base controller
Change-Id: I0a08a51a3cd59dc0beebecd2f0ddf21c91a3aea1
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/30-programming.conf
+++ b/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/30-programming.conf
@@ -4,15 +4,15 @@
                 <name>global-instruction-scheduler</name>
 		<notification-service>
 			<type xmlns:binding="urn:opendaylight:params:xml:ns:yang:controller:md:sal:binding">binding:binding-notification-service</type>
-			<name>ref_binding-notification-broker</name>
+			<name>binding-notification-broker</name>
 		</notification-service>
 		<rpc-registry>
 			<type xmlns:binding="urn:opendaylight:params:xml:ns:yang:controller:md:sal:binding">binding:binding-rpc-registry</type>
-			<name>ref_binding-broker-impl</name>
+			<name>binding-rpc-broker</name>
 		</rpc-registry>
 		<timer>
 			<type xmlns:netty="urn:opendaylight:params:xml:ns:yang:controller:netty">netty:netty-timer</type>
-			<name>ref_global-timer</name>
+			<name>global-timer</name>
 		</timer>
         </module>
 //SERVICES START
