--- a/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/31-bgp.conf
+++ b/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/31-bgp.conf
@@ -44,11 +44,11 @@
 		</bgp-extensions>
 		<boss-group>
 			<type xmlns:netty="urn:opendaylight:params:xml:ns:yang:controller:netty">netty:netty-threadgroup</type>
-			<name>ref_global-boss-group</name>
+			<name>global-boss-group</name>
 		</boss-group>
 		<worker-group>
 			<type xmlns:netty="urn:opendaylight:params:xml:ns:yang:controller:netty">netty:netty-threadgroup</type>
-			<name>ref_global-worker-group</name>
+			<name>global-worker-group</name>
 		</worker-group>
 	</module>
 //SERVICES START
