--- a/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/32-pcep.conf
+++ b/distributions/serviceprovider/src/main/resources/opendaylight/configuration/initial/32-pcep.conf
@@ -36,23 +36,23 @@
 		</pcep-session-proposal-factory>
 		<boss-group>
 			<type xmlns:netty="urn:opendaylight:params:xml:ns:yang:controller:netty">netty:netty-threadgroup</type>
-			<name>ref_global-boss-group</name>
+			<name>global-boss-group</name>
 		</boss-group>
 		<worker-group>
 			<type xmlns:netty="urn:opendaylight:params:xml:ns:yang:controller:netty">netty:netty-threadgroup</type>
-			<name>ref_global-worker-group</name>
+			<name>global-worker-group</name>
 		</worker-group>
 		<timer>
 			<type xmlns:netty="urn:opendaylight:params:xml:ns:yang:controller:netty">netty:netty-timer</type>
-			<name>ref_global-timer</name>
+			<name>global-timer</name>
 		</timer>
 	</module>
 	<module>
-		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:pcep:topology:provider">prefix:pcep-topology-impl</type>
+		<type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:pcep:topology:provider">prefix:pcep-topology-provider</type>
 		<name>pcep-topology</name>
 		<data-provider>
 			<type xmlns:binding="urn:opendaylight:params:xml:ns:yang:controller:md:sal:binding">binding:binding-data-broker</type>
-			<name>ref_binding-data-broker</name>
+			<name>binding-data-broker</name>
 		</data-provider>
 		<dispatcher>
 			<type xmlns:pcep="urn:opendaylight:params:xml:ns:yang:controller:pcep">pcep:pcep-dispatcher</type>
@@ -60,15 +60,13 @@
 		</dispatcher>
 		<rpc-registry>
 			<type xmlns:binding="urn:opendaylight:params:xml:ns:yang:controller:md:sal:binding">binding:binding-rpc-registry</type>
-			<name>ref_binding-broker-impl</name>
+			<name>binding-rpc-broker</name>
 		</rpc-registry>
 		<scheduler>
 			<type xmlns:pgmspi="urn:opendaylight:params:xml:ns:yang:controller:programming:spi">pgmspi:instruction-scheduler</type>
-                        <name>ref_global-instruction-scheduler</name>
+                        <name>global-instruction-scheduler</name>
 		</scheduler>
 		<topology-id>pcep-topology</topology-id>
-		<listen-address>0.0.0.0</listen-address>
-		<listen-port>4189</listen-port>
 	</module>
 //SERVICES START
         <service>
@@ -104,7 +102,7 @@
 		</instance>
 	</service>
 	<service>
-		<type xmlns:pcep="urn:opendaylight:params:xml:ns:yang:controller:pcep:topology:provider">pcep:pcep-topology</type>
+		<type xmlns:pcep="urn:opendaylight:params:xml:ns:yang:controller:pcep:topology:provider">pcep:pcep-topology-reference</type>
 		<instance>
 			<name>pcep-topology</name>
 			<provider>/config/modules/module[name='pcep-topology-provider']/instance[name='pcep-topology']</provider>
