--- a/distributions/virtualization/pom.xml
+++ b/distributions/virtualization/pom.xml
@@ -35,8 +35,8 @@ http://maven.apache.org/maven-v4_0_0.xsd">
     <!-- ovsdb --> 
     <dependency>
       <groupId>org.opendaylight.ovsdb</groupId>
-      <artifactId>ovsdb</artifactId>
-      <version>0.4.0-SNAPSHOT</version>
+      <artifactId>ovsdb.neutron</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
     </dependency>
 
     <!-- vtn -->
